# Auth_Service

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.load.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: d6d6b88136d7_initial.py
app/: main.py
app/api/: deps.py  router.py
app/api/v1/: admin.py  auth.py  business.py  health.py  users.py
app/core/: config.py  exceptions.py  logging.py
app/core/security/: __init__.py  password.py  tokens.py
app/db/: base.py  redis.py  seed.py  session.py
app/middleware/: rate_limit.py  request_context.py  security_headers.py
app/models/: __init__.py  associations.py  audit.py  permission.py  role.py  session.py  user.py
app/repositories/: permission.py  role.py  session.py  user.py
app/schemas/: auth.py  business.py  common.py  rbac.py  user.py
app/services/: auth.py  authz.py  user.py
docker/: Dockerfile  entrypoint.sh  nginx.conf
loadtest/: users_me.js
tests/: conftest.py  test_admin.py  test_auth.py  test_authz.py  test_business.py  test_edge.py  test_health.py  test_middleware.py  test_security.py  test_seed.py  test_users.py
